@@ -19,11 +19,13 @@ public class MiTareaRunnable implements Runnable{
     @Override
     public void run() {
         for (int i=1; i<=5; i++){
-            System.out.println("Hilo" + Thread.currentThread().getId() + " : Contador " + i);
+            // get.Id() deprecated
+            // System.out.println("Hilo" + Thread.currentThread().getId() + " : Contador " + i);
+            System.out.println("Soy el hilo " + Thread.currentThread().threadId() + " y ejecuto el contador " + i);
             try{
                 Thread.sleep(1000);
             } catch (InterruptedException e) {
-                e.printStackTrace();
+                throw new RuntimeException(e);
             }
         }
     }
